# code_it_fetch

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  package.xml
include/code_it_fetch/: .robot_api.h.swp  robot_api.h
launch/: fetch_voice_cmd.launch  fetch_voice_cmd_wake_astro.launch  fetch_voice_recognition.launch
pocketsphinx_dictionaries/astro_wake_word_dic/: 0051.sent  fetch_voice_cmd.corpus~  fetch_voice_cmd_wake_astro.corpus  fetch_voice_cmd_wake_astro.lm
pocketsphinx_dictionaries/first_dic/: 0465.log_pronounce  0465.vocab  fetch_voice_cmd.corpus  fetch_voice_cmd.dic  fetch_voice_cmd.lm
pocketsphinx_dictionaries/our_dic/: 0465.sent
src/: .main_node.cpp.swp  .robot_api.cpp.swp  main_node.cpp  robot_api.cpp
