<?xml version="1.0"?>
<package format="2">
  <name>code_it_fetch</name>
  <version>0.1.0</version>
  <description>An implementation of CodeIt for the Fetch robot.</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>blinky</depend>
  <depend>code_it_msgs</depend>
  <depend>map_annotator</depend>
  <depend>rapid_fetch</depend>
  <depend>rapid_pbd_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
